Possible fix to #843
Adds a CSS “clearfix” to columns. This forces the padding to work.
Needs rigorous testing to make sure it doesn’t make the layout of pages
look weird.

--- a/style/css/layout.css
+++ b/style/css/layout.css
@@ -37,6 +37,12 @@ blockquote {
         padding: 0;
         }
     
+    .layout-quaver:after {
+        content: "";
+        display: table;
+        clear: both;
+    	}
+    
     [class*="block-"][class*="layout-quaver"] {
         width: calc(9.33333333333% - 36px);
         }
@@ -59,6 +65,12 @@ blockquote {
         clear: none;
         padding: 0;
         }
+    
+    .layout-crotchet:after {
+        content: "";
+        display: table;
+        clear: both;
+    	}
     
     .layout-grid-crotchet .layout-crotchet {
         width: 100%;
@@ -102,6 +114,12 @@ blockquote {
         padding: 0;
         }
     
+    .layout-crotchet-staccato:after {
+        content: "";
+        display: table;
+        clear: both;
+    	}
+    
     [class*="block-"][class*="layout-crotchet-staccato"] {
         width: calc(27% - 36px);
         }
@@ -128,6 +146,12 @@ blockquote {
         background-image: none;
         padding: 0;
         }
+    
+    .layout-minim:after {
+        content: "";
+        display: table;
+        clear: both;
+    	}
     
     [class*="block-"][class*="layout-minim-staccato"] {
         width: calc(49% - 36px);
@@ -181,6 +205,12 @@ blockquote {
         padding: 0;
         }
     
+    .layout-minim-staccato:after {
+        content: "";
+        display: table;
+        clear: both;
+    	}
+    
     [class*="block-"][class*="layout-minim-staccato"] {
         width: calc(42% - 36px);
         }
@@ -204,6 +234,13 @@ blockquote {
         margin: 0 auto;
         float: none;
         }
+    
+    .layout-breve:after,
+    .layout-semibreve:after {
+        content: "";
+        display: table;
+        clear: both;
+    	}
     
     [class*="block-"][class*="layout-semibreve"],
     [class*="block-"][class*="layout-breve"] {
